--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -5,314 +5,111 @@ body{
   background: black;
 }
 
-.btn2{
-  display: inline-block;
-  width: 50px;
-  height: 50px;
-  background: #191919;
-  margin: 10px;
-  border-radius: 30%;
-  box-shadow: 0 5px 15px -5px #00000070;
-  color: #3498db;
+/* header.php */
+
+.navbar{
+  position: fixed;
+  height: 80px;
   overflow: hidden;
-  position: relative;
-}
-
-.btn2 i{
-  line-height: 50px;
-  font-size: 26px;
-  transition: 0.2s linear;
-}
-.btn2:hover i{
-  transform: scale(1.3);
-  color: #f1f1f1;
-}
-.btn2::before{
-  content: "";
-  position: absolute;
-  width: 120%;
-  height: 120%;
-  background: #3498db;
-  transform: rotate(45deg);
-  left: -110%;
-  top: 90%;
-}
-.btn2:hover::before{
-  animation: aaa 0.7s 1;
-  top: -10%;
-  left: -10%;
-}
-@keyframes aaa {
-  0%{
-    left: -110%;
-    top: 90%;
-  }50%{
-    left: 10%;
-    top: -30%;
-  }100%{
-    top: -10%;
-    left: -10%;
-  }
-}
-
-.box{
-  width: 300px;
-  padding: 40px;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%,-50%);
-  background: #191919;
-  text-align: center;
-}
-.box h1{
-  color: white;
-  text-transform: uppercase;
-  font-weight: 500;
-}
-.box input[type = "text"],.box input[type = "password"]{
-  border:0;
-  background: none;
-  display: block;
-  margin: 20px auto;
-  text-align: center;
-  border: 2px solid #3498db;
-  padding: 14px 10px;
-  width: 200px;
-  outline: none;
-  color: white;
-  border-radius: 24px;
-  transition: 0.25s;
-}
-
-.imgcontainer {
-  text-align: center;
-  margin: 24px 0 12px 0;
-}
-
-img.avtar {
-  width: 20%;
-  border-radius: 40%;
-}
-
-.box input[type = "text"]:focus,.box input[type = "password"]:focus{
-  width: 280px;
-  border-color: #2ecc71;
-}
-.box input[type = "submit"]{
-  border:0;
-  background: none;
-  display: block;
-  margin: 20px auto;
-  text-align: center;
-  border: 2px solid #2ecc71;
-  padding: 14px 40px;
-  outline: none;
-  color: white;
-  border-radius: 24px;
-  transition: 0.25s;
-  cursor: pointer;
-}
-.box input[type = "submit"]:hover{
-  background: #2ecc71;
-}
-body{
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
-  background: black;
-}
-h1{
-  color: white;
-}
-.wrapper1{
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  width: 100%;
-  padding: 0 20px;
-}
-
-.player-form{
+  top: 0;
   display: flex;
-  max-width: 550px;
-  margin: 0 auto;
+  align-items: center;
   background: #191919;
-  padding: 30px;
-  border-radius: 5px;
-  box-shadow: 0 0 10px rgba(0,0,0,0.3);
-}
-
-.input-fields{
-  display: flex;
-  flex-direction: column;
-  margin-right: 4%;
-}
-
-.input-fields,
-.msg{
-  width: 48%;
-}
-
-.input-fields .input,
-.msg textarea{
-  margin: 10px 0;
-  background: transparent;
-  border: 0px;
-  border-bottom: 2px solid #c5ecfd;
-  padding: 10px;
-  color: #c5ecfd;
   width: 100%;
 }
 
-
-
-::-webkit-input-placeholder {
-  color: #c5ecfd;
-}
-::-moz-placeholder {
-  color: #c5ecfd;
-}
-:-ms-input-placeholder {
-  color: #c5ecfd;
-}
-
-.wrapper1 input[type = "submit"]{
-  border:0;
-  background: none;
-  display: block;
-  margin: 20px auto;
-  text-align: center;
-  border: 2px solid #2ecc71;
-  padding: 14px 40px;
-  outline: none;
+.logo{
+  text-align: left;
+  margin: 30px 0 12px 0;
   color: white;
-  border-radius: 24px;
-  transition: 0.25s;
-  cursor: pointer;
-}
-.wrapper1 input[type = "submit"]:hover{
-  background: #2ecc71;
-}
-@media screen and (max-width: 600px){
-  .player-form{
-    flex-direction: column;
-  }
-  .msg textarea{
-    height: 80px;
-  }
-  .input-fields,
-  .msg{
-    width: 100%;
-  }
-}
-body{
-  margin: 0;
-  padding: 0;
-  background: black;
-}
-.signup-form{
-  width: 300px;
-  padding: 40px;
   position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%,-50%);
-  background: #191919;
-  text-align: center;
-}
-.imgcontainer3 {
-  text-align: center;
-  margin: 24px 0 12px 0;
+  left: 30px;
+  width: 180px;
+  height: 80px;
 }
 
-img.avtar {
-  width: 20%;
-  border-radius: 40%;
+img.symbol {
+  width: 100%;
 }
-.signup-form h1{
-  color: white;
-  text-transform: uppercase;
-  font-weight: 500;
+
+.btn1{
+  display: none;
+  position: absolute;
+  right: 20px;
 }
-.signup-form input{
-  border:0;
-  background: none;
+
+.btn1:hover > span{
+  background: #6ab04c;
+}
+
+.btn1 span{
   display: block;
-  margin: 20px auto;
-  text-align: center;
-  border: 2px solid #3498db;
-  padding: 14px 10px;
-  width: 200px;
-  outline: none;
+  margin: 6px;
+  width: 40px;
+  height: 3px;
+  background: #333;
+}
+
+p{
+  padding: 20px;
+  font-size: 20px;
+  text-align: justify;
+}
+
+.menu{
+  position: absolute;
+  right: 20px;
+}
+
+.menu a{
   color: white;
-  border-radius: 24px;
-  transition: 0.25s;
-}
-input[type = "submit"]{
-  border:0;
-  background: none;
-  display: block;
-  margin: 20px auto;
-  text-align: center;
-  border: 2px solid #2ecc71;
-  padding: 14px 40px;
-  outline: none;
-  color: white;
-  border-radius: 24px;
-  transition: 0.25s;
-  cursor: pointer;
-}
-input[type = "submit"]:hover{
-  background: #2ecc71;
-}
-input[type = "text"],input[type = "password"],input[type = "Email"]{
-  border:0;
-  background: none;
-  display: block;
-  margin: 20px auto;
-  text-align: center;
-  border: 2px solid #3498db;
-  padding: 14px 10px;
-  width: 200px;
-  outline: none;
-  color: white;
-  border-radius: 24px;
-  transition: 0.25s;
-}
-input[type = "text"]:focus,input[type = "password"]:focus,input[type = "Email"]:focus{
-  width: 280px;
-  border-color: #2ecc71;
-}
-.signup-btn{
-  margin-top: 60px;
-  margin-bottom: 20px;
-  background: #487eb0;
-  color: #fff;
-  border-radius: 44px;
-  cursor: pointer;
-  transition: 0.8s;
-}
-.signup-btn:hover{
-  transform: scale(0.96);
-}
-.signup-form a{
   text-decoration: none;
-  color: #fff;
-  font-family: "montserrat",sans-serif;
-  font-size: 14px;
-  padding: 10px;
-  transition: 0.8s;
-  display: block;
+  font-weight: 700;
+  margin-left: 20px;
+  transition: color 0.3s;
+  text-transform: uppercase;
 }
-.signup-form a:hover{
-  background: rgba(0,0,0,.3);
+
+.menu a:hover{
+  color: #6ab04c;
 }
-body{
-  background: black;
-  margin: 0;
-  padding: 0;
-  font-family: "Montserrat";
+
+@media only screen and (max-width : 600px) {
+  .navbar{
+    overflow: visible;
+  }
+
+  .menu{
+    width: 100%;
+    right: 0;
+    top: 80px;
+    background: #f1f1f1;
+    overflow: hidden;
+    max-height: 0;
+  }
+  .menu a{
+    display: block;
+    text-align: center;
+    padding: 10px;
+    margin: 0;
+  }
+  .btn1{
+    display: block;
+    cursor: pointer;
+  }
+  .show{
+    max-height: 500px;
+  }
+}
+
+/* index.php */
+
+.header{
+  width: 100%;
+  height: 600px;
+  background: url(bg.png) no-repeat 50% 50%;
+  background-size: cover;
+  margin-top: 80px;
 }
 
 .side1{
@@ -340,105 +137,129 @@ body{
   margin-left: 0;
 }
 
-.navbar{
-  position: fixed;
-  height: 80px;
-  overflow: hidden;
-  top: 0;
-  display: flex;
-  align-items: center;
-  background: #191919;
-  width: 100%;
-}
-.logo{
-  text-align: left;
-  margin: 24px 0 12px 0;
-  color: white;
-  position: absolute;
-  left: 30px;
-  width: 180px;
-  height: 80px;
-}
-img.symbol {
-  width: 30%;
-}
-.menu{
-  position: absolute;
-  right: 20px;
-}
-.menu a{
-  color: white;
-  text-decoration: none;
-  font-weight: 700;
-  margin-left: 20px;
-  transition: color 0.3s;
-  text-transform: uppercase;
-}
-.menu a:hover{
-  color: #6ab04c;
-}
-.header{
-  width: 100%;
-  height: 600px;
-  background: url(bg.png) no-repeat 50% 50%;
-  background-size: cover;
-  margin-top: 80px;
-}
-.btn1{
-  display: none;
-  position: absolute;
-  right: 20px;
-}
-.btn1:hover > span{
-  background: #6ab04c;
-}
-.btn1 span{
-  display: block;
-  margin: 6px;
-  width: 40px;
-  height: 3px;
-  background: #333;
-}
-p{
-  padding: 20px;
-  font-size: 20px;
-  text-align: justify;
+/* login.php && signup.php*/
 
+.box{
+  width: 300px;
+  padding: 40px;
+  position: absolute;
+  top: 55%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  background: #191919;
+  text-align: center;
 }
-@media only screen and (max-width : 600px) {
-  .navbar{
-    overflow: visible;
-  }
-  .menu{
-    width: 100%;
-    right: 0;
-    top: 80px;
-    background: #f1f1f1;
-    overflow: hidden;
-    max-height: 0;
-  }
-  .menu a{
-    display: block;
-    text-align: center;
-    padding: 10px;
-    margin: 0;
-  }
-  .btn1{
-    display: block;
-    cursor: pointer;
-  }
-  .show{
-    max-height: 500px;
-  }
-body{
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
-  background: black;
+
+.imgcontainer {
+  text-align: center;
+  margin: 24px 0 12px 0;
 }
-h1{
+
+img.avtar {
+  width: 20%;
+  border-radius: 40%;
+}
+
+.box h1{
   color: white;
+  text-transform: uppercase;
+  font-weight: 500;
 }
+
+.btn2{
+  display: inline-block;
+  width: 50px;
+  height: 50px;
+  background: #191919;
+  margin: 10px;
+  border-radius: 30%;
+  box-shadow: 0 5px 15px -5px #00000070;
+  color: #3498db;
+  overflow: hidden;
+  position: relative;
+}
+
+.btn2 i{
+  line-height: 50px;
+  font-size: 26px;
+  transition: 0.2s linear;
+}
+
+.btn2:hover i{
+  transform: scale(1.3);
+  color: #f1f1f1;
+}
+
+.btn2::before{
+  content: "";
+  position: absolute;
+  width: 120%;
+  height: 120%;
+  background: #3498db;
+  transform: rotate(45deg);
+  left: -110%;
+  top: 90%;
+}
+
+.btn2:hover::before{
+  animation: aaa 0.7s 1;
+  top: -10%;
+  left: -10%;
+}
+@keyframes aaa {
+  0%{
+    left: -110%;
+    top: 90%;
+  }50%{
+    left: 10%;
+    top: -30%;
+  }100%{
+    top: -10%;
+    left: -10%;
+  }
+}
+
+input[type = "text"],input[type = "password"],input[type = "email"]{
+  border:0;
+  background: none;
+  display: block;
+  margin: 20px auto;
+  text-align: center;
+  border: 2px solid #3498db;
+  padding: 14px 10px;
+  width: 200px;
+  outline: none;
+  color: white;
+  border-radius: 24px;
+  transition: 0.25s;
+}
+
+.box input[type = "text"]:focus,.box input[type = "password"]:focus,.box input[type = "email"]:focus{
+  width: 280px;
+  border-color: #2ecc71;
+}
+
+.box input[type = "submit"]{
+  border:0;
+  background: none;
+  display: block;
+  margin: 20px auto;
+  text-align: center;
+  border: 2px solid #2ecc71;
+  padding: 14px 40px;
+  outline: none;
+  color: white;
+  border-radius: 24px;
+  transition: 0.25s;
+  cursor: pointer;
+}
+
+.box input[type = "submit"]:hover{
+  background: #2ecc71;
+}
+
+/* newmatch.php && player.php*/
+
 .wrapper{
   position: absolute;
   top: 50%;
@@ -447,7 +268,7 @@ h1{
   padding: 0 20px;
 }
 
-.newmatch-form{
+.form1{
   display: flex;
   max-width: 550px;
   margin: 0 auto;
@@ -457,19 +278,21 @@ h1{
   box-shadow: 0 0 10px rgba(0,0,0,0.3);
 }
 
+h1{
+  color: white;
+}
+
 .input-fields{
   display: flex;
   flex-direction: column;
   margin-right: 4%;
 }
 
-.input-fields,
-.msg{
+.input-fields,.msg{
   width: 48%;
 }
 
-.input-fields .input,
-.msg textarea{
+.input-fields .input,.msg textarea{
   margin: 10px 0;
   background: transparent;
   border: 0px;
@@ -478,8 +301,6 @@ h1{
   color: #c5ecfd;
   width: 100%;
 }
-
-
 
 ::-webkit-input-placeholder {
   color: #c5ecfd;
@@ -505,12 +326,13 @@ h1{
   transition: 0.25s;
   cursor: pointer;
 }
+
 .wrapper input[type = "submit"]:hover{
   background: #2ecc71;
 }
 
 @media screen and (max-width: 600px){
-  .newmatch-form{
+  .player-form{
     flex-direction: column;
   }
   .msg textarea{
@@ -522,21 +344,12 @@ h1{
   }
 }
 
-body{
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
-  background: linear-gradient(rgba(0,0,0,.5),rgba(0,0,0,.5)), url("../images/stadium.jpg") no-repeat;
-  background-size: cover;
-}
+/* scorecard.php */
+
 .main{
   color: white;
   font-size: 30px;
   text-align: center;
-}
-.imgcontainer1 {
-  max-width: 100%;
-  height: auto;
 }
 
 .details{
@@ -548,6 +361,7 @@ body{
   padding: 10px;
   text-align: center;
 }
+
 .btns{
   overflow: hidden;
   position: absolute;
@@ -558,13 +372,14 @@ body{
   border-color: #2ecc71;
   background: none;
 }
+
 .btns a {
     border:0;
     background: none;
     display: block;
     margin: 20px auto;
     text-align: center;
-    border: 2px solid blue;
+    border: 2px solid #3498db;
     outline: none;
     color: white;
     border-radius: 24px;
@@ -581,6 +396,7 @@ body{
     align-items: center;
     justify-content: center;
 }
+
 .btns a:hover{
-background: black;
+background: #3498db;
 }
