--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -345,7 +345,8 @@ h1{
   }
 }
 .main{
-  margin-top: 120px;
+  padding-top: 120px;
+  height: 100vh;
   padding: 0;
   font-family: sans-serif;
   background: linear-gradient(rgba(0,0,0,.5),rgba(0,0,0,.5)), url("../images/stadium.jpg") no-repeat;
