--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -261,6 +261,14 @@ input[type = "text"],input[type = "password"],input[type = "email"]{
 
 /* newmatch.php && player.php*/
 
+.wrapper1{
+  position: absolute;
+  top: 75%;
+  transform: translateY(-50%);
+  width: 100%;
+  padding: 0 20px;
+}
+
 .wrapper{
   position: absolute;
   top: 50%;
@@ -332,6 +340,26 @@ h1{
   background: #2ecc71;
 }
 
+.wrapper1 input[type = "submit"]{
+  border:0;
+  background: none;
+  display: block;
+  margin: 20px auto;
+  text-align: center;
+  border: 2px solid #2ecc71;
+  padding: 14px 40px;
+  outline: none;
+  color: white;
+  border-radius: 24px;
+  transition: 0.25s;
+  cursor: pointer;
+}
+
+.wrapper1 input[type = "submit"]:hover{
+  background: #2ecc71;
+}
+
+
 @media screen and (max-width: 600px){
   .player-form{
     flex-direction: column;
@@ -349,7 +377,7 @@ h1{
   height: 100vh;
   padding: 0;
   font-family: sans-serif;
-  background: linear-gradient(rgba(0,0,0,.5),rgba(0,0,0,.5)), url("../images/stadium.jpg") no-repeat;
+  background: linear-gradient(rgba(0,0,0,.5)), url("../images/stadium.jpg") no-repeat;
   background-size: cover;
   color: white;
   font-size: 30px;
