--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -373,14 +373,8 @@ h1{
   }
 }
 /* .main{
-  padding-top: 120px;
-  height: 100vh;
-  padding: 0;
-  font-family: sans-serif;
-  background: linear-gradient(rgba(0,0,0,.5)), url("../images/stadium.jpg") no-repeat;
-  background-size: cover;
   color: white;
-  font-size: 30px;
+  font-size: 25px;
   text-align: center;
 } */
 
@@ -389,7 +383,7 @@ h1{
   color: white;
   font-size: 18px;
   border-collapse: collapse;
-  opacity: 0.95;
+  opacity: 0.70;
   padding: 10px;
   text-align: center;
 }
@@ -397,13 +391,16 @@ h1{
 
 
 .round-btns a:hover{
-background: #3498db;
+background: #333;
+text-decoration: none;
+color: #fff;
 }
 
 .round-btns a{ 
     display: block;
     text-align: center;
-    border: 2px solid #3498db;
+    color: #fff;
+    border: 4px solid #444;
     border-radius: 24px;
     transition: 0.25s;
     text-decoration: none;
